Add header and structure
Created html structure on the main page, designed the header with css and add the products view to show the products list on the webpage. Next step is to work on the product page.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,25 @@
 </head>
 
 <body>
-
+<header>
+    <img src="Logos/EcoVisionSALogo.png" alt="Logo de EcoVision SA" class="logo">
+    <h1 class="NombreEmpresa">EcoVision SA</h1>
+</header>
+<main>
+    <section>
+<h1>Nuestros productos</h1>
+<p>Descubre nuestra amplia gama de productos diseñados para satisfacer tus necesidades.</p>
+    </section>
+    <section>
+      <app-productos></app-productos>
+    </section>
+  
+</main>
+<footer>
+    <p>¿Desea algo más? ¡No dude en contactarnos!</p>
+    <p>+888 8888 8888</p>
+    <p>Todos los derechos reservados © 2025</p>
+</footer>
 </body>
 
 </html>
