--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,14 +1,23 @@
-header{
-    background-color: #396d3c;
-    padding: 1.5%;
-    font-family: 'Courier New', Courier, monospace;
-}
+
 .logo{
     width: 8%;
     height: auto;
     float: left;
+ background-color: white;
+    border-radius: 50%;
+    margin-left: 1.7%;
     margin-bottom: 3%;
+    margin-top: 0.7%;
 }
+
+
+.ContenedorNombre{
+    background-color: #396d3c;
+    padding: 1.5%;
+    border-radius: 0% 0% 60% 0%;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .NombreEmpresa{
     font-size: 2em;
     font-weight: bold;
