--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,8 +6,14 @@
 
 <body>
 <header>
-    <img src="Logos/EcoVisionSALogo.png" alt="Logo de EcoVision SA" class="logo">
-    <h1 class="NombreEmpresa">EcoVision SA</h1>
+    <div class="ContenedorLogo">
+     <img src="Logos/EcoVisionSALogo.png" alt="Logo de EcoVision SA" class="logo">
+    </div>
+    <div class="ContenedorNombre">
+        <nav>
+        <h1 class="NombreEmpresa">EcoVision SA</h1>
+        </nav>
+    </div>
 </header>
 <main>
     <section>
@@ -27,3 +33,4 @@
 </body>
 
 </html>
+<router-outlet></router-outlet>
