--- a/src/app/productos/productos.css
+++ b/src/app/productos/productos.css
@@ -17,7 +17,7 @@
 
 .EncabezadoMenu h2 {
   margin: 0;
-  color: #51b32b;
+  color: #39801d;
   font-size: 24px;
   font-weight: 600;
 }
@@ -192,7 +192,7 @@
 .Precio {
   font-size: 22px;
   font-weight: bold;
-  color: #51b32b;
+  color: #39801d;
   margin-bottom: 0;
 }
 
