--- a/src/app/app.html
+++ b/src/app/app.html
@@ -50,6 +50,7 @@
         <p>Estoy preparando las ubicaciones</p>
       }
 </main>
+<app-cookies></app-cookies>
 <br>
 <footer>
     <p>¿Desea algo más? ¡No dude en contactarnos!</p>
