Added cookies knowledge
Add the cookies webpage, the user can see how cookies work on that webpage

--- a/src/app/cookies/cookies.html
+++ b/src/app/cookies/cookies.html
@@ -10,7 +10,6 @@
   <br>
   <br>
   <p>
-    Para más información sobre cómo utilizamos las cookies y cómo puedes
-    gestionarlas, por favor visita nuestra <a routerLink="/avisocookies" aria-label="Politica de cookies">Política de Cookies</a>.
+    Puede conocer más sobre las cookies en las <a href="https://www.modelosycontratos.com/modelo-aviso-cookies-pagina-web" aria-label="Politica de cookies">politicas de cookies</a>.
   </p>
   </section>
